# ZHM5Randomizer

./: .gitignore  BUILD  README.md  WORKSPACE.bazel
.github/workflows/: build.yml
item_data/: DefaultItemPools.json  IgnoreList.json
sample/: hitman_randomizer.toml
src/: Config.h  DefaultItemPool.cpp  DefaultItemPool.h  DefaultItemPoolRepository.cpp  DefaultItemPoolRepository.h  Item.h  Offsets.cpp  Offsets.h  RandomizationMan.cpp  RandomizationMan.h  Repository.cpp  Repository.h  SSceneInitParameters.cpp  Signatures.h  Version.cpp  Version.h  dllmain.cpp
src/randomizers/: Identity.cpp  Identity.h  Randomizer.cpp  Randomizer.h  custom.cpp  custom.h
src/randomizers/hero/: Default.cpp  Default.h
src/randomizers/npc/: ChainReaction.cpp  ChainReaction.h  Custom.cpp  Custom.h  Default.cpp  Default.h  Hard.cpp  Hard.h  Sleepy.cpp  Sleepy.h  Unlimited.cpp  Unlimited.h
src/randomizers/stash/: Default.cpp  Default.h
src/randomizers/world/: AllExplosives.cpp  AllExplosives.h  Custom.cpp  Custom.h  Identity.cpp  Identity.h  NoItems.cpp  Roulette.cpp  Roulette.h  TreasureHunt.cpp  TreasureHunt.h  action.cpp  action.h  all_explosives.cpp  default.cpp  default.h  no_items.cpp  no_items.h  treasure_hunt.cpp
