workspace(name = "ZHM5Randomizer")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "wso_third_party_buildfiles",
    urls = ["https://github.com/warriorstar-orion/third_party_buildfiles/archive/dfd15714620b388342010a8e100fe6279cda785b.zip"],
    strip_prefix = "third_party_buildfiles-dfd15714620b388342010a8e100fe6279cda785b",
)


load("@wso_third_party_buildfiles//:deps.bzl", "wso_deps")

wso_deps()

http_archive(
    name = "com_google_absl",
    strip_prefix = "abseil-cpp-98eb410c93ad059f9bba1bf43f5bb916fc92a5ea",
    urls = ["https://github.com/abseil/abseil-cpp/archive/98eb410c93ad059f9bba1bf43f5bb916fc92a5ea.zip"],
)
